Bug 831087 - IonMonkey: Differential Testing: Getting different output w/without --ion-eager with /=  r=mjrosenb a=nonlibxul